# suma

./: docker-compose.yml
suma/: alembic.ini  init.sql  pyproject.toml
suma-web/: pyproject.toml
suma-web/suma_web/: config.py  main.py
suma-web/suma_web/blueprints/: auth.py  decorators.py  qa.py
suma-web/suma_web/blueprints/templates/suma/: base.html
suma-web/suma_web/blueprints/templates/suma/auth/: login.html
suma-web/suma_web/blueprints/templates/suma/qa/: add.html  add.js  base.html  home.html  sidebar.html
suma-web/suma_web/blueprints/templates/suma/qa/layout/: topbar.html
suma-web/suma_web/public/: manifest.json
suma-web/tests/: auth_test.py  conftest.py
suma/alembic/: env.py
suma/alembic/versions/: e715338d4aad_start.py
suma/suma/: locator.py
suma/suma/application/: h_user.py  jwt_auth.py  services.py
suma/suma/domain/: shared.py
suma/suma/domain/model/: auth.py  entry.py  qa.py
suma/suma/infrastructure/persistence/sqlalchemy/: db.py  repositories.py
