[tool.poetry]
name = "suma-web"
version = "0.1.0"
description = ""
authors = ["gcca <git@gcca.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sanic = {extras = ["ext"], version = "^23.12.1"}
Jinja2 = "^3.1.4"
suma = {path = "../suma"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
sanic-testing = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
